--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     ]
   },
   "dependencies": {
-    "@alexshelkov/lambda": "^1.4.0",
-    "@alexshelkov/result": "^1.1.0",
+    "@alexshelkov/lambda": "^1.5.3",
+    "@alexshelkov/result": "^1.1.1",
+    "@slack/webhook": "^6.0.0",
     "@types/aws-lambda": "^8.10.59",
     "@types/axios": "^0.14.0",
     "@types/node": "^14.0.23",
@@ -31,9 +32,9 @@
     "aws-sdk": "^2.857.0",
     "axios": "^0.21.1",
     "module-alias": "^2.2.2",
+    "serverless-scriptable-plugin": "^1.1.0",
     "source-map-support": "^0.5.19",
-    "uuid": "^8.3.0",
-    "serverless-scriptable-plugin": "^1.1.0"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.19.0",
