--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     ]
   },
   "dependencies": {
-    "@alexshelkov/lambda": "^1.5.5",
+    "@alexshelkov/lambda": "^1.5.7",
     "@alexshelkov/result": "^1.1.1",
     "@slack/webhook": "^6.0.0",
     "@types/aws-lambda": "^8.10.59",
@@ -31,10 +31,12 @@
     "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.857.0",
     "axios": "^0.21.1",
+    "joi": "^17.4.0",
     "module-alias": "^2.2.2",
     "serverless-scriptable-plugin": "^1.1.0",
     "source-map-support": "^0.5.19",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.19.0",
