--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "lint-staged": {
     "*.{js,ts}": [
       "prettier --write",
-      "eslint --fix",
+      "eslint --fix --rule 'tsc/config: [2, {configFile: \"tsconfig.json\"}]'",
       "git add"
     ]
   },
   "dependencies": {
-    "@alexshelkov/lambda": "^1.5.7",
-    "@alexshelkov/result": "^1.1.1",
+    "@alexshelkov/lambda": "^1.5.10",
+    "@alexshelkov/result": "^1.1.2",
     "@slack/webhook": "^6.0.0",
     "@types/aws-lambda": "^8.10.59",
     "@types/axios": "^0.14.0",
@@ -31,27 +31,29 @@
     "@types/uuid": "^8.3.0",
     "aws-sdk": "^2.857.0",
     "axios": "^0.21.1",
+    "husky": "^4.3.8",
     "joi": "^17.4.0",
     "module-alias": "^2.2.2",
     "serverless-scriptable-plugin": "^1.1.0",
     "source-map-support": "^0.5.19",
+    "superstruct": "^0.15.1",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.21",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
-    "@types/jest": "^26.0.21",
     "coveralls": "^3.1.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-prettier": "^3.3.1",
-    "eslint-config-prettier": "^8.1.0",
-    "husky": "^4.3.8",
+    "eslint-plugin-tsc": "^2.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.1",
