--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@alexshelkov/lambda-slack-logs",
+  "name": "lambda-mdl-slack-logs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "check": "tsc --noEmit",
+    "check": "tsc --noEmit && eslint --fix src",
     "build": "tsc"
   },
   "author": "Alex Shelkovskiy",
@@ -22,8 +22,8 @@
     ]
   },
   "dependencies": {
-    "@alexshelkov/lambda": "^1.7.3",
-    "@alexshelkov/result": "^1.1.3",
+    "lambda-mdl": "^1.0.0",
+    "lambda-res": "^1.0.0",
     "@slack/webhook": "^6.0.0",
     "@types/aws-lambda": "^8.10.59",
     "@types/axios": "^0.14.0",
