--- a/package.json
+++ b/package.json
@@ -2,66 +2,52 @@
   "name": "lambda-mdl-slack-logs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "pretty": "prettier --write src/**",
     "check": "tsc --noEmit && eslint --fix src",
     "build": "tsc"
   },
   "author": "Alex Shelkovskiy",
   "license": "MIT",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "prettier --write",
-      "eslint --fix --rule 'tsc/config: [2, {configFile: \"tsconfig.json\"}]'",
-      "git add"
-    ]
-  },
   "dependencies": {
-    "lambda-mdl": "^1.0.16",
-    "@slack/webhook": "^6.0.0",
-    "@types/aws-lambda": "^8.10.59",
+    "@types/aws-lambda": "^8.10.91",
+    "@slack/webhook": "^6.1.0",
+    "aws-sdk": "^2.857.0",
+    "axios": "^0.25.0",
+    "joi": "^17.5.0",
+    "lambda-mdl": "^1.2.1",
+    "superstruct": "^0.15.3",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "^14.0.23",
     "@types/uuid": "^8.3.0",
-    "aws-sdk": "^2.857.0",
-    "axios": "^0.21.1",
-    "husky": "^4.3.8",
-    "joi": "^17.4.0",
-    "module-alias": "^2.2.2",
-    "serverless-scriptable-plugin": "^1.1.0",
-    "source-map-support": "^0.5.19",
-    "superstruct": "^0.15.1",
-    "uuid": "^8.3.0",
-    "yup": "^0.32.9"
-  },
-  "devDependencies": {
-    "@types/jest": "^26.0.21",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "coveralls": "^3.1.0",
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-import-resolver-typescript": "^2.4.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-prettier": "^3.3.1",
+    "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "coveralls": "^3.1.1",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-tsc": "^2.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3",
-    "typescript-docs-verifier": "^1.1.3"
-  },
-  "peerDependencies": {
-    "serverless": "^2.31.0",
-    "typescript": "^4.2.3"
+    "jest": "^27.4.5",
+    "prettier": "^2.5.1",
+    "serverless-scriptable-plugin": "^1.2.2",
+    "ts-jest": "^27.1.1",
+    "typescript": "^4.5.5",
+    "typescript-docs-verifier": "^2.0.0",
+    "serverless": "^3.0.1"
   }
 }
