--- a/serverless.yml
+++ b/serverless.yml
@@ -1,15 +1,14 @@
-frameworkVersion: ">= 2.31.0"
+frameworkVersion: ">= 3"
 
 service: lambda-examples
 
 useDotenv: true
-variablesResolutionMode: 20210219
-unresolvedVariablesNotificationMode: error
 
 package:
-  exclude:
-    - '**/node_modules/aws-sdk/**'
-    - '**/node_modules/@types/**'
+  patterns:
+    - '!src/**'
+    - '!**/node_modules/aws-sdk/**'
+    - '!**/node_modules/@types/**'
 
 custom:
   build: npm run ${env:SLS_BUILD, 'build'}
@@ -26,7 +25,6 @@ plugins:
 
 provider:
   name: aws
-  lambdaHashingVersion: 20201221
 
   apiGateway:
     shouldStartNameWithService: true
@@ -38,11 +36,6 @@ provider:
 
   environment:
     WEBHOOK_URL: ${env:WEBHOOK_URL}
-
-#  iam:
-#    role:
-#      statements:
-#        -
 
 functions:
   TestGet:
@@ -86,13 +79,3 @@ functions:
       - http:
           path: test/cache
           method: get
-
-
-resources:
-
-#  - Resources:
-#      # --------------------------------------------------------------------
-#      # Resources
-#      # --------------------------------------------------------------------
-#      SomeResource:
-#        Type: ..
